--- a/website-skeleton/templates/registration/register.html.twig
+++ b/website-skeleton/templates/registration/register.html.twig
@@ -97,6 +97,7 @@
         </div>
     </div>
     {{ form_end(registrationForm) }}
+    {{ form_errors(registrationForm) }}
     </form>
     </div>
     </div>
