--- a/website-skeleton/templates/default/login.html.twig
+++ b/website-skeleton/templates/default/login.html.twig
@@ -15,24 +15,25 @@
                             <div class="form-group col-10 offset-1">
                                 <label for="InputEmail">Username/Email address</label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" id="InputEmail" name="InputEmail" placeholder="your email" data-error="Ops! Invalid eMail address" required  >
+                                    <input type="text" class="form-control" id="InputEmail" name="_username" placeholder="your email" data-error="Ops! Invalid eMail address" required  >
                                 </div>
                                 <div class="help-block with-errors"></div>
                             </div>
                             <div class="form-group col-10 offset-1">
                                 <label for="InputPassword">Password</label>
                                 <div class="input-group">
-                                    <input type="password" class="form-control" id="InputPassword" name="InputPassword" placeholder="password" data-error="Please type password" required  >
+                                    <input type="password" class="form-control" id="InputPassword" name="_password" placeholder="password" data-error="Please type password" required  >
                                 </div>
                                 <div class="help-block with-errors"></div>
                             </div>
                             <div class="form-group col-10 offset-1 text-center">
                                 <div class="input-group">
-                                    <input type="submit" name="submit" id="submit" value="Connect"
+                                    <input type="submit" name="submit" value="Connect"
                                            class="btn btn-info w-100">
                                 </div>
                             </div>
                         </div>
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
                     </form>
                 </div>
             </div>
